fix: Gallery alignment caused by import ordering

--- a/css/index.css
+++ b/css/index.css
@@ -390,6 +390,32 @@ footer {
 }
 
 /* ============================================= */
+/*             Photo Gallery                      */
+/* ============================================= */
+.gallery-container {
+  width: 100%;
+  height: 100%;
+  max-width: 1028px;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 200px));
+  grid-gap: 20px;
+  margin: 20px auto;
+  justify-content: center;
+}
+.gallery-img {
+  text-align: center;
+  max-width: 200px;
+  max-height: 200px;
+}
+.gallery-thumbnail {
+  width: 100%;
+  height: 100%;
+}
+
+/* ============================================= */
 /*              Main Search Box                  */
 /* ============================================= */
 .search {
